--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Person/_form_prototype.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Person/_form_prototype.html.twig
@@ -2,7 +2,7 @@
     <div class="list-group-item" ng-init="household.members[__index__] = {
             firstname: '', lastname: '' }">
         <h4 class="clearfix">
-            <span class="label label-info">Person __num__</span>
+            <span class="label label-info">Member __num__</span>
             <button class="btn-person-del close pull-right" type="button" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
