--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/renew_panel.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/renew_panel.html.twig
@@ -47,6 +47,11 @@
 				{% do form.parkingCoupon.setRendered %}
 				<div class="radio-inline">
 					<label>
+						<input type="radio" name="renewal[parkingCoupon]" value="1" /> 0
+					</label>
+				</div>
+				<div class="radio-inline">
+					<label>
 						<input type="radio" name="renewal[parkingCoupon]" value="1" /> 1
 					</label>
 				</div>
