--- a/web/css/application.css
+++ b/web/css/application.css
@@ -28,6 +28,10 @@ a {
 	border-radius: 2px;
 }
 
+.form-control, .panel-heading, .panel-footer {
+	border-color: #aaa;
+}
+
 .btn-primary,
 .panel-primary .panel-heading {
 	background-color: #7a0019;
