--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -15,6 +15,7 @@
         <!--[if IE 8]>
             <link rel="stylesheet" type="text/css" href="{{ asset('css/ie8.css') }}">
         <![endif]-->
+        <link href="{{ asset('css/bootstrap3-wysihtml5.min.css') }}" rel="stylesheet" type="text/css" />
         <link href="{{ asset('css/application.css') }}" rel="stylesheet" type="text/css" />
     </head>
     <body>
