Add Twig function for printing contents from ContentBlock

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/register.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/register.html.twig
@@ -137,12 +137,7 @@
 		{{ form_end(form, {'render_rest': false}) }}
 		</div>
 		<div class="col-sm-4">
-			<h4 class="text-muted">Instructions</h4>
-			<ul>
-				<li>Please fill out forms as completely as you can.</li>
-				<li>You may optionally pay in advance for the first seven luncheons with your renewal. No refunds are available; a missed luncheon will be considered a donation to UMRA.</li>
-				<li>To pay by check, complete all of this form, then select "pay by check" to print the completed form and mail it in to UMRA with your check.</li>
-			</ul>
+			{{ umra_content('registration.instructions') }}
 		</div>
 	</div>
 </div>
