Add "content blocks" link for admins in menu
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -76,6 +76,14 @@
 
                     {% if is_granted('ROLE_ADMIN') %}
                     <li>
+                        <a href="{{ path('UMRA_ContentBlock') }}">
+                            Content Blocks
+                        </a>
+                    </li>
+                    {% endif %}
+
+                    {% if is_granted('ROLE_ADMIN') %}
+                    <li>
                         <a href="{{ path('sonata_admin_redirect') }}">
                             Administration
                         </a>
