Render content for `registration.complete` content block in register_thanks
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/register_thanks.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/register_thanks.html.twig
@@ -7,7 +7,10 @@
 	<div class="page-header">
 		<h3>Thanks for registering!</h3>
 	</div>
-	<p class="lead"></p>
-	<p></p>
+	<div class="row">
+		<div class="col-xs-12">
+			{{ umra_content('registration.complete') }}
+		</div>
+	</div>
 </div>
 {% endblock %}
