Render out created transactions in register_thanks & renew_thanks tpls
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/renew_thanks.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/renew_thanks.html.twig
@@ -1,15 +1,15 @@
 {% extends '::base.html.twig' %}
 
-{% block title %}Thanks for registering!{% endblock %}
+{% block title %}Thanks for renewing!{% endblock %}
 
 {% block body %}
 <div id="page-content-container">
     <div class="page-header">
-        <h3>Thanks for registering!</h3>
+        <h3>Thanks for renewing!</h3>
     </div>
     <div class="row">
         <div class="col-xs-12">
-            {{ umra_content('registration.complete') }}
+            {{ umra_content('renewal.complete') }}
         </div>
     </div>
 
