--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Household/index.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Household/index.html.twig
@@ -9,13 +9,11 @@
             <span class="fa fa-search"></span>
             Search
         </button>
+        <button type="reset" class="btn btn-default btn-lg">
+            <span class="fa fa-undo"></span>
+            Reset
+        </button>
     </form>
-
-    <hr />
-
-    <pre>
-        {{ dql }}
-    </pre>
 
     <hr />
 
