Display form-level errors in registration and renewal forms
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Person/_form_full.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Person/_form_full.html.twig
@@ -16,6 +16,7 @@
                 </button>
                 {% endif %}
             </h4>
+            {{ form_errors(member) }}
             <div class="row">
                 <div class="col-sm-6">
                     {{ form_row(member.firstname, { attr: {'ng-model': 'household.members[' ~ loop.index0 ~ '].firstname' }}) }}
