--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/renew_panel.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/renew_panel.html.twig
@@ -4,6 +4,8 @@
 		<h3 class="panel-title">Renewal</h3>
 	</div>
 	<div class="panel-body">
+		{{ form_errors(form) }}
+
 		<div class="form-group">
 			<label class="control-label">Membership Type</label>
 			<div>
