--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Trans/edit.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Trans/edit.html.twig
@@ -1,16 +1,18 @@
 {% extends 'UMRAMemberBundle::nav.html.twig' %}
 
 {% block modulecontent -%}
-    <h1>Trans edit</h1>
+    <h1>Editing Transaction</h1>
 
     {{ form(edit_form) }}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('UMRA_Trans') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+    <ul class="list-inline">
+        <li>
+            <a href="{{ path('UMRA_Trans') }}" class="btn btn-default">
+                Back to the list
+            </a>
+        </li>
+        <li>
+            {{ form(delete_form) }}
+        </li>
+    </ul>
 {% endblock %}
