Fix membershipStatus on registration by marking form input as readonly
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/register.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/register.html.twig
@@ -42,7 +42,7 @@
 							{% do form.membershipStatus.setRendered %}
 							<div class="radio-inline">
 								<label>
-									<input type="radio" name="register[membershipStatus]" value="new" checked disabled /> New Member
+									<input type="radio" name="register[membershipStatus]" value="new" checked readonly /> New Member
 								</label>
 							</div>
 						</div>
