Change Processor Transaction ID table header to PayPal Transaction ID for clarity
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Trans/index.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Trans/index.html.twig
@@ -33,7 +33,7 @@
                     <th>Payment Method</th>
                     <th>Status</th>
                     <th>Reconciled by</th>
-                    <th>Processor Transaction ID</th>
+                    <th>PayPal Transaction ID</th>
                     <th>Actions</th>
                 </tr>
             </thead>
