--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Person/profile.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Person/profile.html.twig
@@ -22,7 +22,11 @@
         <div class="tab-pane fade" id="renewals">
             <br />
             <div class="col-sm-5">
-                {% include 'UMRAMemberBundle:Registration:renew_panel.html.twig' with {'form': renewalForm } %}
+                {% include 'UMRAMemberBundle:Registration:renew_panel.html.twig' with {
+                    'form': renewalForm,
+                    'renewal_eligible': renewalEligible,
+                    'last_renewal_date': lastRenewalDate
+                } %}
             </div>
             <div class="col-sm-7">
                 <div class="panel panel-default">
