Calculate total cost from PayPal item cost
Signed-off-by: Max Fierke <max@maxfierke.com>

--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/register.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/register.html.twig
@@ -70,17 +70,17 @@
 							{% do form.luncheonPreorder.setRendered %}
 							<div class="radio-inline">
 								<label>
-									<input type="radio" name="register[luncheonPreorder]" ng-model="costs.luncheon" value="112" /> Single ($112)
+									<input type="radio" name="register[luncheonPreorder]" ng-model="types.luncheon" value="single" /> Single ($112)
 								</label>
 							</div>
 							<div class="radio-inline">
 								<label>
-									<input type="radio" name="register[luncheonPreorder]" ng-model="costs.luncheon" value="224" /> Couple ($224)
+									<input type="radio" name="register[luncheonPreorder]" ng-model="types.luncheon" value="couple" /> Couple ($224)
 								</label>
 							</div>
 							<div class="radio-inline">
 								<label>
-									<input type="radio" name="register[luncheonPreorder]" ng-model="costs.luncheon" value="0" /> Do not pre-purchase
+									<input type="radio" name="register[luncheonPreorder]" ng-model="types.luncheon" value="none" /> Do not pre-purchase
 								</label>
 							</div>
 						</div>
