--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/register_failed.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/register_failed.html.twig
@@ -10,7 +10,7 @@
     <div class="row">
         <div class="col-xs-12">
             <p>
-                We encountered an error when attempting to start the payment process with PayPal.
+                We encountered an error when attempting to start the payment process with PayPal. Unfortunately, this means we could not continue to the payment process.
             </p>
             <p>
                 Your account has been created. You should have received an email with a link to set your password.
