--- a/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/register.html.twig
+++ b/src/UMRA/Bundle/MemberBundle/Resources/views/Registration/register.html.twig
@@ -71,6 +71,13 @@
 							<div class="radio-inline">
 								<label>
 									<input type="radio" name="register[luncheonPreorder]"
+										ng-model="types.luncheon" ng-change="costs.luncheon = 0"
+										value="none" selected="selected" /> Do not pre-purchase
+								</label>
+							</div>
+							<div class="radio-inline">
+								<label>
+									<input type="radio" name="register[luncheonPreorder]"
 										ng-model="types.luncheon" ng-change="costs.luncheon = 112"
 										value="single" /> Single ($112)
 								</label>
@@ -80,13 +87,6 @@
 									<input type="radio" name="register[luncheonPreorder]"
 										ng-model="types.luncheon" ng-change="costs.luncheon = 224"
 										value="couple" /> Couple ($224)
-								</label>
-							</div>
-							<div class="radio-inline">
-								<label>
-									<input type="radio" name="register[luncheonPreorder]"
-										ng-model="types.luncheon" ng-change="costs.luncheon = 0"
-										value="none" /> Do not pre-purchase
 								</label>
 							</div>
 						</div>
